--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  text-decoration: none;
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +12,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  list-style: none;
+  
 }
 
 code {
