--- a/src/components/Items/Item.css
+++ b/src/components/Items/Item.css
@@ -4,30 +4,37 @@
     transition: 2s;
 }
 .item {
-
-cursor: pointer;
-display: flex;
+    display: flex;
     flex-direction: column;
+    cursor: pointer;
+    height: 360px;
+    margin: 20px;
+    border: 2px solid #dadada;
+    padding: 20px;
+    cursor: pointer;
+    width: 260px;
     align-items: center;
+}
+
+.item img{
+    width: 13rem;
+    margin-bottom: 1rem;
+}
+
+
+.item-price {
+    font-size: 18px;
+    font-weight: bold;
+   margin-bottom: 1rem;
+   
 }
 .item p{
     margin: 6px 0px;
     font-size: 18px;
-    line-height: 2;
+    margin-bottom: 1rem;
     font-weight: bold;
     text-transform: capitalize;
     
-}
-.item img{
-    width: 200px;
-}
-.item-price {
-    display: flex;
-    gap: 2em;
-    font-size: 18px;
-    font-weight: bold;
-   margin-bottom: 0.8em;
-   
 }
 .item .btn-price{
     font-size: 18px;
