--- a/src/components/NewProduct/NewProduct.css
+++ b/src/components/NewProduct/NewProduct.css
@@ -1,9 +1,5 @@
 .newProducts{
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 8px;
-height: 80vh;
+    padding: 8px 42px 0px;
 }
 
 
@@ -23,6 +19,6 @@ height: 80vh;
 .item-product{
     margin-top: 50px;
     display: flex;
-    gap: 30px;
+    justify-content: space-around;
     
 }
